tests/passing/hof.tails
func hof() -> int:
  123

func tests() -> unit:
  let a = hof

  discard a()
