tests/failing/type_def_generics_recursive_usage.tails
type A<T> = A<T>

func tests() -> unit:
  let a: A[int] = 123

  pass
